--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,28 +30,28 @@ jobs:
       with:
         tf_actions_version: ${{ env.TF_VERSION }}
         tf_actions_subcommand: 'fmt'
-        tf_actions_working_dir: "./AKS"
+        tf_actions_working_dir: "./AKS2"
          
     - name: 'Terraform Init'
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: ${{ env.TF_VERSION }}
         tf_actions_subcommand: 'init'
-        tf_actions_working_dir: "./AKS"
+        tf_actions_working_dir: "./AKS2"
  
     - name: 'Terraform Validate'
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: ${{ env.TF_VERSION }}
         tf_actions_subcommand: 'validate'
-        tf_actions_working_dir: "./AKS"
+        tf_actions_working_dir: "./AKS2"
          
     - name: 'Terraform Plan'
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: ${{ env.TF_VERSION }}
         tf_actions_subcommand: 'plan'
-        tf_actions_working_dir: "./AKS"
+        tf_actions_working_dir: "./AKS2"
  
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main'
@@ -59,4 +59,4 @@ jobs:
       with:
         tf_actions_version: ${{ env.TF_VERSION }}
         tf_actions_subcommand: 'apply'
-        tf_actions_working_dir: "./AKS"
+        tf_actions_working_dir: "./AKS2"
